deploy/hub/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hindsight-hub
spec:
  selector:
    app: hindsight-hub
  ports:
    - name: http
      port: 80
      targetPort: http
